--- a/trvl-frontend/travellite/src/components/user-profile/userDetails.css
+++ b/trvl-frontend/travellite/src/components/user-profile/userDetails.css
@@ -1,3 +1,15 @@
+.ud-wrap {
+    width: 100%;
+    height: 200%;
+    display: grid;
+    gap: 20px;
+}
+
+.editDetails {
+    width: 15%;
+    height: 40%;
+}
+
 .up-names {
     display: flex;
     gap: 10%;
@@ -45,7 +57,7 @@ option[value=""][disabled] {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 10%;
-    height: 200%;
+    height: 100%;
 }
 
 .up-pinfo .pass-info {
