some button changes

--- a/trvl-frontend/travellite/src/components/btns/user-btn/userBtn.css
+++ b/trvl-frontend/travellite/src/components/btns/user-btn/userBtn.css
@@ -4,12 +4,14 @@
     right: 0;
     width: 15%;
     margin-right: 35px;
+    display: flex;
 }
 
 .userbtn-wrap .userbtn {
     width: 100%;
     border: 0;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     font-size: 1.1em;
     font-family: var(--font-fam);
     padding: 20px;
@@ -28,5 +30,29 @@
 }
 
 .userbtn:hover {
-    background-color: blue;
+    background-color: #14ae5c;
+}
+
+.userbtn:active {
+    color: white;
+}
+
+.userbtn-wrap .logoutbtn {
+    width: 50%;
+    border: 0;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    font-size: 1.1em;
+    font-family: var(--font-fam);
+    padding: 10px;
+    font-weight: bold;
+    background-color: #757575;
+}
+
+.logoutbtn:hover {
+    background-color: #ff0000;
+}
+
+.logoutbtn:active {
+    color: white;
 }
