--- a/trvl-frontend/travellite/src/components/log-sign-page/signPage.css
+++ b/trvl-frontend/travellite/src/components/log-sign-page/signPage.css
@@ -96,6 +96,9 @@ img:active {
 }
 
 .signMessage {
-    color: white;
+    margin-top: 0;
+    color: #14ae5c;
     text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
 }
