--- a/trvl-frontend/travellite/src/components/search-results/miniSearchResult.css
+++ b/trvl-frontend/travellite/src/components/search-results/miniSearchResult.css
@@ -1,28 +1,40 @@
 .minisr-wrap {
-    background-color: #000000;
-    width: 90%;
-    height: 90%;
-    border-radius: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2%;
+  background-color: #000000;
+  width: 90%;
+  height: 90%;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2%;
 }
 
 .minisr-wrap .minisrelements {
-    background-color: #757575;
-    border-radius: 25px;
-    height: 80%;
+  background-color: #757575;
+  border-radius: 25px;
+  height: 80%;
 }
 
 #minisr-company {
-    width: 19%;
+  width: 19%;
+  text-align: center;
+  line-height: 100px;
+  height: 100px;
+  font-size: 1.3em;
 }
 
 #minisr-details {
-    width: 40%;
+  font-size: 1.2em;
+  width: 40%;
+  text-align: center;
+  height: 100px;
+  padding: 5px;
 }
 
 #minisr-price {
-    width: 25%;
+  width: 25%;
+  text-align: center;
+  line-height: 100px;
+  height: 100px;
+  font-size: 1.5em;
 }
