--- a/trvl-frontend/travellite/src/components/home-page/homePage.css
+++ b/trvl-frontend/travellite/src/components/home-page/homePage.css
@@ -1,18 +1,19 @@
 .homepage-wrap {
-    width: 100%;
-    height: 100%;
-    font-family: var(--font-fam);
+  width: 100%;
+  height: 100%;
+  font-family: var(--font-fam);
 }
 
 .homepage-wrap .homepage-landing-top {
-    width: 100%;
-    height: 15%;
+  width: 100%;
+  height: 15%;
 }
 
 .homepage-wrap .homepage-main {
-    display: flex;
-    gap: 1%;
-    align-items: center;
-    justify-content: center;
-    height: 85%;
+  display: flex;
+  gap: 1%;
+  align-items: center;
+  justify-content: center;
+  height: 85%;
+  margin-top: 10px;
 }
