--- a/trvl-frontend/travellite/src/components/search-results/searchResult.css
+++ b/trvl-frontend/travellite/src/components/search-results/searchResult.css
@@ -1,51 +1,78 @@
 .sr-wrap {
-    background-color: #000000;
-    width: 98%;
-    height: 90%;
-    border-radius: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2%;
+  background-color: #000000;
+  width: 98%;
+  height: 90%;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2%;
 }
 
 .sr-wrap .srelements {
-    background-color: #757575;
-    border-radius: 25px;
-    height: 80%;
+  background-color: #757575;
+  border-radius: 25px;
+  height: 80%;
 }
 
 #sr-company {
-    width: 20%;
+  width: 20%;
+  font-size: 1.3em;
+  text-align: center;
+  line-height: 100px;
+  height: 100px;
 }
 
 #sr-details {
-    width: 50%;
+  width: 50%;
+  font-size: 1em;
+  text-align: center;
+  height: 100px;
+  padding: 10px;
 }
 
 #sr-price {
-    width: 15%;
+  width: 15%;
+  font-size: 1.5em;
+  text-align: center;
+  line-height: 100px;
+  height: 100px;
 }
 
 #sr-choose {
-    width: 5%;
-    height: 10%;
-    background-color: transparent;
+  width: 5%;
+  height: 10%;
+  background-color: transparent;
 }
 
 #sr-choose #choosebtn {
-    border: 0;
-    border-radius: 15px;
-    height: 100%;
-    width: 100%;
+  border: 0;
+  border-radius: 15px;
+  height: 100%;
+  width: 100%;
 }
 
 #choosebtn:hover {
-    color: white;
-    font-weight: bold;
-    background-color: #14ae5c;
+  color: white;
+  font-weight: bold;
+  background-color: #14ae5c;
 }
 
 #choosebtn:active {
-    color: green;
+  color: green;
+}
+
+#sr-details .ori-dest {
+  font-size: 1.2em;
+  font-weight: bold;
+  height: 30%;
+}
+
+#sr-details .timing {
+  height: 50%;
+  white-space: pre-line;
+}
+
+#sr-details .duration {
+  height: 20%;
 }
