--- a/trvl-frontend/travellite/src/components/home-page/resultDisplay.css
+++ b/trvl-frontend/travellite/src/components/home-page/resultDisplay.css
@@ -1,10 +1,10 @@
 .resultdisp-wrap {
     width: 77%;
-    height: 100%;
+    height: 70vh;
     background-color: #ffffff;
     border-radius: 25px;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding-left: 5px;
 }
