--- a/trvl-frontend/travellite/src/components/search-results/searchResult.css
+++ b/trvl-frontend/travellite/src/components/search-results/searchResult.css
@@ -1,12 +1,14 @@
 .sr-wrap {
   background-color: #000000;
   width: 98%;
-  height: 90%;
+  height: 250px;
   border-radius: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2%;
+  gap: 1%;
+  margin: 10px 0;
+  padding: 10px;
 }
 
 .sr-wrap .srelements {
@@ -41,7 +43,7 @@
 
 #sr-choose {
   width: 5%;
-  height: 10%;
+  height: 20%;
   background-color: transparent;
 }
 
